k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delivery-management
  labels:
    name: delivery-management
    environment: production
